--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -29,6 +29,7 @@
     <header>
         <h1>Jhoel Cruzado Abanto</h1>
         <p>pagina personal</p>
+        <p>pagina personal....</p>
         <!--Enlaces de navegación -->
         <nav>
             <ul>
