--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Jhoel Cruzado Abanto" />
     <meta name="description" content="Pagina personal HTML, index" />
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -27,11 +27,11 @@
     <script src="" async defer></script>
 
     <header>
-        <h1>Jhoel Cruzado Abanto</h1>
+        <h1 class="titulo1">Jhoel Cruzado Abanto</h1>
         <p>pagina personal</p>
         <p>pagina personal....</p>
         <!--Enlaces de navegación -->
-        <nav>
+        <nav class="navegador">
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="#perfil">PERFIL</a></li>
@@ -44,10 +44,10 @@
     <hr>
 
     <section id="perfil">
-        <h2>Perfil</h2>
+        <h2 class="titulo2">Perfil</h2>
         <p>Soy un estudiante de <strong>Ingenieria de Sistemas</strong></p>
         <hr />
-        <h3>Sobre mi</h3>
+        <h3 class="titulos">Sobre mi</h3>
         <p>
             Soy un estudiante de <del>octavo</del> <ins datetime="20190420"> noveno</ins> ciclo de Ingenieria de Sistemas de la
             <abbr title="Universidad Nacional de Cajamarca">UNC.</abbr>
@@ -55,7 +55,7 @@
         </p>
 
         <div>
-            <h3>Detalles</h3>
+            <h3 class="titulo3">Detalles</h3>
             <p><strong>Nombre:</strong><br /> Jhoel Cruzado Abanto<br />
                 <strong>Edad:</strong><br /> 23 años<br />
                 <strong>Lugar:</strong><br /> <abbr title="Barrio">BR.</abbr> San Martin, Cajamarca<br />
@@ -65,7 +65,7 @@
     <hr/>
 
     <section id="estudios">
-        <h1>ESTUDIOS</h1>
+        <h1 class="titulo3">ESTUDIOS</h1>
         <dl>
             <dt>Primaria</dt>
             <dd>Magna Vallejo #122906</dd>
@@ -78,7 +78,7 @@
     <hr/>
 
     <section id="hobbies">
-        <h1>HOBBIES</h1>
+        <h1 class="titulo3">HOBBIES</h1>
         <h2>Futbol</h2>
         <p>Mi mayor hobbie es el <em>futbol</em> este hobbie es uno de los mas comunes, mi equipo faborito es el <a href="https://www.realmadrid.com/">Real Madrid</a></p>
         <p>Mi jugardor faborito es <a href="https://www.youtube.com/watch?v=IYBeG6DXxyo" target="_blank">Marcelo Vieira</a></p>
