--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -31,7 +31,7 @@
         <p>pagina personal</p>
         <p>pagina personal....</p>
         <!--Enlaces de navegación -->
-        <nav class="navegador">
+        <nav>
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="#perfil">PERFIL</a></li>
@@ -91,7 +91,7 @@
     </section>
     <hr/>
 
-    <aside>
+    <aside class="columna">
         <img src="images/foto1.png" alt="Jhoel Cruzado" title="JHOEL" width="178" height="235" />
         <div>
             <ul>
@@ -104,7 +104,7 @@
         </div>
 
     </aside>
-    <footer>
+    <footer class="piepag">
         <p>Copyright &copy; 2019.</p>
         <address>Autor: Jhoel Cruzado Abanto <br/> Ultima modificacion: mayo del 2019</address>
     </footer>
