--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -31,7 +31,7 @@
         <p>pagina personal</p>
         <p>pagina personal....</p>
         <!--Enlaces de navegación -->
-        <nav>
+        <nav id="navegador">
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="#perfil">PERFIL</a></li>
@@ -65,7 +65,7 @@
     <hr/>
 
     <section id="estudios">
-        <h1 class="titulo3">ESTUDIOS</h1>
+        <h1 class="titulo2">ESTUDIOS</h1>
         <dl>
             <dt>Primaria</dt>
             <dd>Magna Vallejo #122906</dd>
@@ -78,7 +78,7 @@
     <hr/>
 
     <section id="hobbies">
-        <h1 class="titulo3">HOBBIES</h1>
+        <h1 class="titulo2">HOBBIES</h1>
         <h2>Futbol</h2>
         <p>Mi mayor hobbie es el <em>futbol</em> este hobbie es uno de los mas comunes, mi equipo faborito es el <a href="https://www.realmadrid.com/">Real Madrid</a></p>
         <p>Mi jugardor faborito es <a href="https://www.youtube.com/watch?v=IYBeG6DXxyo" target="_blank">Marcelo Vieira</a></p>
