--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -27,9 +27,8 @@
     <script src="" async defer></script>
 
     <header>
-        <h1 class="titulo1">Jhoel Cruzado Abanto</h1>
+        <h1>Jhoel Cruzado Abanto</h1>
         <p>pagina personal</p>
-        <p>pagina personal....</p>
         <!--Enlaces de navegación -->
         <nav id="navegador">
             <ul>
@@ -37,74 +36,81 @@
                 <li><a href="#perfil">PERFIL</a></li>
                 <li><a href="#estudios">ESTUDIOS</a></li>
                 <li><a href="#hobbies">HOBBIES</a></li>
+                <li><a href="lugares.html">LUGARES TURISTICOS</a></li>
                 <li><a href="contact.html">CONTACTO</a></li>
             </ul>
         </nav>
     </header>
     <hr>
 
-    <section id="perfil">
-        <h2 class="titulo2">Perfil</h2>
-        <p>Soy un estudiante de <strong>Ingenieria de Sistemas</strong></p>
-        <hr />
-        <h3 class="titulos">Sobre mi</h3>
-        <p>
-            Soy un estudiante de <del>octavo</del> <ins datetime="20190420"> noveno</ins> ciclo de Ingenieria de Sistemas de la
-            <abbr title="Universidad Nacional de Cajamarca">UNC.</abbr>
-            <br> Interesado en el uso de la tecnologia para la solucion de problemas
-        </p>
+    <div id="agrupar">
+        <section class="seccion1" id="perfil">
+            <h2 class="titulo2">Perfil</h2>
+            <p>Soy un estudiante de <strong>Ingenieria de Sistemas</strong></p>
+            <hr />
+            <div id="det1">
+                <h3 class="titulos">Sobre mi</h3>
+                <p>
+                    Soy un estudiante de <del>octavo</del> <ins datetime="20190420"> noveno</ins> ciclo de Ingenieria de Sistemas de la
+                    <abbr title="Universidad Nacional de Cajamarca">UNC.</abbr>
+                    <br> Interesado en el uso de la tecnologia para la solucion de problemas
+                </p>
+            </div>
 
-        <div>
-            <h3 class="titulo3">Detalles</h3>
-            <p><strong>Nombre:</strong><br /> Jhoel Cruzado Abanto<br />
-                <strong>Edad:</strong><br /> 23 años<br />
-                <strong>Lugar:</strong><br /> <abbr title="Barrio">BR.</abbr> San Martin, Cajamarca<br />
-            </p>
-        </div>
-    </section>
-    <hr/>
 
-    <section id="estudios">
-        <h1 class="titulo2">ESTUDIOS</h1>
-        <dl>
-            <dt>Primaria</dt>
-            <dd>Magna Vallejo #122906</dd>
-            <dt>Secundaria</dt>
-            <dd>Toribio Casnoba Lopez #262906</dd>
-            <dt>Superior</dt>
-            <dd>Universidad Nacional de Cajamarca</dd>
-        </dl>
-    </section>
-    <hr/>
+            <div id="det2">
+                <h3 class="titulo3">Detalles</h3>
+                <p><strong>Nombre:</strong><br /> Jhoel Cruzado Abanto<br />
+                    <strong>Edad:</strong><br /> 23 años<br />
+                    <strong>Lugar:</strong><br /> <abbr title="Barrio">BR.</abbr> San Martin, Cajamarca<br />
+                </p>
+            </div>
+            <br>
+        </section>
+        <hr/>
 
-    <section id="hobbies">
-        <h1 class="titulo2">HOBBIES</h1>
-        <h2>Futbol</h2>
-        <p>Mi mayor hobbie es el <em>futbol</em> este hobbie es uno de los mas comunes, mi equipo faborito es el <a href="https://www.realmadrid.com/">Real Madrid</a></p>
-        <p>Mi jugardor faborito es <a href="https://www.youtube.com/watch?v=IYBeG6DXxyo" target="_blank">Marcelo Vieira</a></p>
+        <section class="seccion1" id="estudios">
+            <h1 class="titulo2">ESTUDIOS</h1>
+            <dl>
+                <dt>Primaria</dt>
+                <dd>Magna Vallejo #122906</dd>
+                <dt>Secundaria</dt>
+                <dd>Toribio Casnoba Lopez #262906</dd>
+                <dt>Superior</dt>
+                <dd>Universidad Nacional de Cajamarca</dd>
+            </dl>
+        </section>
+        <hr/>
 
-        <h2>Matacion</h2>
-        <p>Me gusta practicar la natacion ya que es un deporte completo, mi estilo favorito es el estilo libre</p>
-        <h2>Ciclismo</h2>
-        <p>Nos permite disfrutar de la sensación de libertad o los paseos, encontrarán en la bicicleta un medio perfecto para ello. <br>Ademas es una alternativa rápida y sana de transporte, sobre todo en la ciudad donde suelen presentarse problemas con
-            el tráfico. <br> Salir con bicicleta a circuitos , caminos o carreteras, sólo o en grupo (con amigos o en un club) , es para muchos un deporte que provoca una intensa satisfacción y afición</p>
-    </section>
-    <hr/>
+        <section class="seccion1" id="hobbies">
+            <h1 class="titulo2">HOBBIES</h1>
+            <h2>Futbol</h2>
+            <p>Mi mayor hobbie es el <em>futbol</em> este hobbie es uno de los mas comunes, mi equipo faborito es el <a href="https://www.realmadrid.com/">Real Madrid</a></p>
+            <p>Mi jugardor faborito es <a href="https://www.youtube.com/watch?v=IYBeG6DXxyo" target="_blank">Marcelo Vieira</a></p>
 
-    <aside class="columna">
-        <img src="images/foto1.png" alt="Jhoel Cruzado" title="JHOEL" width="178" height="235" />
-        <div>
-            <ul>
-                <li>
-                    <a href="mailto:jcruzadoa14@unc.edu.pe">jcruzadoa14@unc.edu.pe</a>
-                </li>
-                <li><a href="mailto:someone@example.com?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com&subject=Summer%20Party&body=You%20are%20invited%20to%20a%20big%20summer%20party!" target="_top">Enviar mail!</a></li>
-                <li><a href="https://es-la.facebook.com/jhoel.cruzadoabanto">Facebook de Jhoel</a></li>
-            </ul>
-        </div>
+            <h2>Matacion</h2>
+            <p>Me gusta practicar la natacion ya que es un deporte completo, mi estilo favorito es el estilo libre</p>
+            <h2>Ciclismo</h2>
+            <p>Nos permite disfrutar de la sensación de libertad o los paseos, encontrarán en la bicicleta un medio perfecto para ello. <br>Ademas es una alternativa rápida y sana de transporte, sobre todo en la ciudad donde suelen presentarse problemas
+                con el tráfico. <br> Salir con bicicleta a circuitos , caminos o carreteras, sólo o en grupo (con amigos o en un club) , es para muchos un deporte que provoca una intensa satisfacción y afición</p>
+        </section>
+        <hr/>
 
-    </aside>
-    <footer class="piepag">
+        <aside id="columna">
+            <img src="images/foto1.png" alt="Jhoel Cruzado" title="JHOEL" width="178" height="235" />
+            <div>
+                <ul>
+                    <li>
+                        <a href="mailto:jcruzadoa14@unc.edu.pe">jcruzadoa14@unc.edu.pe</a>
+                    </li>
+                    <li><a href="mailto:someone@example.com?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com&subject=Summer%20Party&body=You%20are%20invited%20to%20a%20big%20summer%20party!" target="_top">Enviar mail!</a></li>
+                    <li><a href="https://es-la.facebook.com/jhoel.cruzadoabanto">Facebook de Jhoel</a></li>
+                </ul>
+            </div>
+
+        </aside>
+    </div>
+    <footer id="piepag">
         <p>Copyright &copy; 2019.</p>
         <address>Autor: Jhoel Cruzado Abanto <br/> Ultima modificacion: mayo del 2019</address>
     </footer>
