--- a/PaginaWeb/contact.html
+++ b/PaginaWeb/contact.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Jhoel Cruzado Abanto" />
     <meta name="description" content="Pagina personal HTML, contact" />
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <h1>CONTACTO</h1>
 
         <!--Enlaces de navegación -->
-        <nav>
+        <nav id="navegador">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="contact.html">CONTACTO</a></li>
@@ -84,7 +84,7 @@
     </aside>
     <hr>
 
-    <footer>
+    <footer id="piepag">
         <p>Copyright &copy; 2019.</p>
         <address>Autor: Jhoel Cruzado Abanto <br/> Ultima modificacion: mayo del 2019</address>
     </footer>
