--- a/PaginaWeb/lugares.html
+++ b/PaginaWeb/lugares.html
@@ -16,7 +16,7 @@
     <meta name="author" content="Jhoel Cruzado Abanto" />
     <meta name="description" content="Pagina de lugares turisticos de Cajamarca" />
 
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
@@ -132,7 +132,7 @@
         </div>
 
     </aside>
-    <footer class="piepag">
+    <footer id="piepag">
         <p>Copyright &copy; 2019.</p>
         <address>Autor: Jhoel Cruzado Abanto <br/> Ultima modificacion: mayo del 2019</address>
     </footer>
