--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -49,7 +49,7 @@
             <p>Soy un estudiante de <strong>Ingenieria de Sistemas</strong></p>
             <hr />
             <div id="det1">
-                <h3 class="titulos">Sobre mi</h3>
+                <h3 class="titulo2">Sobre mi</h3>
                 <p>
                     Soy un estudiante de <del>octavo</del> <ins datetime="20190420"> noveno</ins> ciclo de Ingenieria de Sistemas de la
                     <abbr title="Universidad Nacional de Cajamarca">UNC.</abbr>
@@ -59,7 +59,7 @@
 
 
             <div id="det2">
-                <h3 class="titulo3">Detalles</h3>
+                <h3 class="titulo2">Detalles</h3>
                 <p><strong>Nombre:</strong><br /> Jhoel Cruzado Abanto<br />
                     <strong>Edad:</strong><br /> 23 años<br />
                     <strong>Lugar:</strong><br /> <abbr title="Barrio">BR.</abbr> San Martin, Cajamarca<br />
