--- a/PaginaWeb/lugares.html
+++ b/PaginaWeb/lugares.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
-<body>
+<body id="bodyl">
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
