--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
-<body>
+<body id="bodyin">
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -88,7 +88,7 @@
             <p>Mi mayor hobbie es el <em>futbol</em> este hobbie es uno de los mas comunes, mi equipo faborito es el <a href="https://www.realmadrid.com/">Real Madrid</a></p>
             <p>Mi jugardor faborito es <a href="https://www.youtube.com/watch?v=IYBeG6DXxyo" target="_blank">Marcelo Vieira</a></p>
 
-            <h2>Matacion</h2>
+            <h2>Natacion</h2>
             <p>Me gusta practicar la natacion ya que es un deporte completo, mi estilo favorito es el estilo libre</p>
             <h2>Ciclismo</h2>
             <p>Nos permite disfrutar de la sensación de libertad o los paseos, encontrarán en la bicicleta un medio perfecto para ello. <br>Ademas es una alternativa rápida y sana de transporte, sobre todo en la ciudad donde suelen presentarse problemas
