--- a/PaginaWeb/index.html
+++ b/PaginaWeb/index.html
@@ -43,7 +43,7 @@
     </header>
     <hr>
 
-    <div id="agrupar">
+    <div id="agrupar1">
         <section class="seccion1" id="perfil">
             <h2 class="titulo2">Perfil</h2>
             <p>Soy un estudiante de <strong>Ingenieria de Sistemas</strong></p>
@@ -94,26 +94,31 @@
             <p>Nos permite disfrutar de la sensación de libertad o los paseos, encontrarán en la bicicleta un medio perfecto para ello. <br>Ademas es una alternativa rápida y sana de transporte, sobre todo en la ciudad donde suelen presentarse problemas
                 con el tráfico. <br> Salir con bicicleta a circuitos , caminos o carreteras, sólo o en grupo (con amigos o en un club) , es para muchos un deporte que provoca una intensa satisfacción y afición</p>
         </section>
-        <hr/>
-
-        <aside id="columna">
-            <img src="images/foto1.png" alt="Jhoel Cruzado" title="JHOEL" width="178" height="235" />
-            <div>
-                <ul>
-                    <li>
-                        <a href="mailto:jcruzadoa14@unc.edu.pe">jcruzadoa14@unc.edu.pe</a>
-                    </li>
-                    <li><a href="mailto:someone@example.com?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com&subject=Summer%20Party&body=You%20are%20invited%20to%20a%20big%20summer%20party!" target="_top">Enviar mail!</a></li>
-                    <li><a href="https://es-la.facebook.com/jhoel.cruzadoabanto">Facebook de Jhoel</a></li>
-                </ul>
-            </div>
-
-        </aside>
     </div>
+    <hr/>
+
+    <aside id="columna">
+        <img src="images/foto1.png" alt="Jhoel Cruzado" title="JHOEL" width="178" height="235" />
+        <div>
+            <ul>
+                <li>
+                    <a href="mailto:jcruzadoa14@unc.edu.pe">jcruzadoa14@unc.edu.pe</a>
+                </li>
+                <li><a href="mailto:someone@example.com?cc=someoneelse@example.com&bcc=andsomeoneelse@example.com&subject=Summer%20Party&body=You%20are%20invited%20to%20a%20big%20summer%20party!" target="_top">Enviar mail!</a></li>
+                <li><a href="https://es-la.facebook.com/jhoel.cruzadoabanto">Facebook de Jhoel</a></li>
+            </ul>
+        </div>
+
+    </aside>
+
+
+
     <footer id="piepag">
         <p>Copyright &copy; 2019.</p>
         <address>Autor: Jhoel Cruzado Abanto <br/> Ultima modificacion: mayo del 2019</address>
     </footer>
+
+
 
 </body>
 
