--- a/laboratorio/prueba.html
+++ b/laboratorio/prueba.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <h1>Probando IconFonts</h1>
-        <h3>Probando actualizacion</h3>
+        <h3>Probando actualizacion..</h3>
         <div>
             <ul>
                 <li>
