--- a/bootstrap4-2/contact.html
+++ b/bootstrap4-2/contact.html
@@ -81,7 +81,7 @@
 
     <aside>
         <section>
-            <img src="images/foto2.png" alt="Jhoel Cruzado" title="JHOEL" width="137" height="220" />
+            <img src="img/foto2.png" alt="Jhoel Cruzado" title="JHOEL" width="137" height="220" />
         </section>
         <section>
             <h2>Datos de contacto</h2>
